cmake_minimum_required(VERSION 3.23)
project(tema2)

set(CMAKE_CXX_STANDARD 14)

add_executable(tema2 main.cpp Person.cpp Person.h Camera.cpp Camera.h Hotel.cpp Hotel.h Angajat.cpp Angajat.h Client.cpp Client.h Util.cpp Util.h GeneratID.cpp GeneratID.h Atractii.cpp Atractii.h Muzeu.cpp Muzeu.h Restaurant.cpp Restaurant.h Teatru.cpp Teatru.h)
